Migrate L::Unpacker to use IO::Async
We have to use the "simple" fork to avoid a deadlock in some
collections.  It seems to be a bit of feature interaction between
IO::Async and IPC::Run.  Nevertheless, with the $loop->fork variant,
it all works.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,7 @@ Build-Depends:
  libfile-basedir-perl <!nocheck>,
  libfile-find-rule-perl <!nocheck>,
  libhtml-parser-perl <!nocheck>,
- libio-async-perl <!nocheck>,
+ libio-async-perl,
  libipc-run-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
  libparse-debianchangelog-perl <!nocheck>,
@@ -102,6 +102,7 @@ Depends:
  libdpkg-perl,
  libemail-valid-perl,
  libfile-basedir-perl,
+ libio-async-perl,
  libipc-run-perl,
  liblist-moreutils-perl,
  libparse-debianchangelog-perl,
