--- a/t/tests/gir/debian/debian/control.in
+++ b/t/tests/gir/debian/debian/control.in
@@ -20,6 +20,7 @@ Description: {$description}
 Package: gir1.2-good-42
 Section: introspection
 Architecture: any
+Provides: gir1.2-goodextras-42 (= $\{binary:Version\})
 Depends: $\{gir:Depends\}, $\{shlibs:Depends\}, $\{misc:Depends\}, libgood-42-0
 Description: {$description} - GIR
  This is a test package designed to exercise some feature or tag of
