data/rules/rules-should-not-use: Add more context to xz-compression-level-too-high tag output.

--- a/t/tests/rules-xz-compression-level-too-high/debian/debian/rules
+++ b/t/tests/rules-xz-compression-level-too-high/debian/debian/rules
@@ -8,3 +8,5 @@ override_dh_builddeb:
 	dh_builddeb -- -z9 -Z xz
 	dh_builddeb -- -z8 -Z xz
 	dh_builddeb -- -z9 -Zgzip
+	dh_builddeb -- -Zxz -Sextreme -z9
+	dh_builddeb -- -Zxz -z9 -Sextreme
