Also check xfonts-foo for font-package-not-multi-arch-foreign.

--- a/t/tests/fields-wrong-section/debian/debian/control.in
+++ b/t/tests/fields-wrong-section/debian/debian/control.in
@@ -244,6 +244,7 @@ Description: {$description} (fonts)
 Package: xfonts-{$source}1
 Architecture: all
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Multi-Arch: foreign
 Description: {$description} (xfonts)
  Test for xfonts modules.
  .
