lib/Lintian/Check.pm: Avoid false positives in the spelling-error-in-description (etc.) tags where the repetition is part of an acronym expansion such as "ORA (ORA Recursive Acronym)". (Closes: #883719)

--- a/t/tests/description-general/debian/debian/control.in
+++ b/t/tests/description-general/debian/debian/control.in
@@ -155,3 +155,5 @@ Description: test for spelling - debian developement
  Some more stuff about this Debian test package. (dummy)
  .
  Duplicate: Duplicate (false positive due to colon)
+ .
+ FOO (FOO Owsome Object) is a recursive acronym.
