--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Build-Depends: aspell <!nocheck>,
                dh-elpa  <!nocheck> | bash (<< 4.4) <!nocheck>,
                diffstat <!nocheck>,
                docbook-utils,
-               docbook-xml <!nocheck>,
+               docbook-xml,
                dpkg (>= 1.17.14),
                fakeroot <!nocheck>,
                file <!nocheck>,
