--- a/t/tests/java-jars/debian/debian/rules
+++ b/t/tests/java-jars/debian/debian/rules
@@ -5,6 +5,7 @@
 override_jh_build:
 	jh_build --javacopts='-target 1.7' --javacopts='-source 1.7'
 	cp testa.jar testb.jar
+	cp testa.jar 0.jar
 	unzip testa.jar
 	zip -r codeless.jar META-INF/
 	zip -r manifestless.jar org/
