--- a/t/tests/fields-depends-general/debian/debian/control.in
+++ b/t/tests/fields-depends-general/debian/debian/control.in
@@ -12,7 +12,7 @@ Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, xorg, bash,
  conflict-dep, gawk | awk, new-package | xbase-clients (>= 0.1), {$source},
  gaim (>= 0.1), emacs21, emacs22, emacs23, makedev, libtest-simple-perl (>= 0.98),
  packaging-dev, xfont-a, emacs22-gtk, emacs23-el, emacs23-nox, emacs23-lucid,
- emacs222, perl-modules
+ emacs222, perl-modules, debhelper
 Breaks: package-without-version, {$source} (<< 0.1),
  replaced-wo-version
 Replaces: replaced-wo-version
@@ -25,7 +25,7 @@ Description: {$description}
 Package: lib{$source}
 Architecture: {$architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, libdb1-compat, perl-modules-5.22
-Recommends: debconf-doc
+Recommends: debconf-doc, cdbs
 Section: libs
 Description: {$description} -- fake library
  This is a fake library designed to exercise some feature or tag of
