--- a/t/tests/fields-vcs-deprecated-in-debian-infrastructure-unrel/debian/debian/control.in
+++ b/t/tests/fields-vcs-deprecated-in-debian-infrastructure-unrel/debian/debian/control.in
@@ -6,7 +6,8 @@ Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 Homepage: https://lintian.debian.org/
-Vcs-Git: https://salsa.debian.org/project/user
+Vcs-Git: https://salsa.debian.org/foo/bar.git
+Vcs-Browser: https://salsa.debian.org/foo/bar
 
 Package: {$source}
 Architecture: {$architecture}
