--- a/t/tests/files-general/debian/debian/rules
+++ b/t/tests/files-general/debian/debian/rules
@@ -37,6 +37,7 @@ override_dh_install:
 	touch $(tmp)/usr/share/fonts/X11/misc/false-positive
 	touch $(tmp)/usr/share/foo/.nfs-fake-tmpfile
 	touch $(tmp)/usr/share/foo/foo.doctree
+	: | gzip > $(tmp)/usr/share/foo/bar.doctree.gz
 	touch $(tmp)/usr/share/foo/gschemas.compiled
 	touch $(tmp)/usr/share/glib-2.0/schemas/gschemas.compiled
 	touch $(tmp)/usr/lib/python3/dist-packages/test_foo.py
