Ignore packages ending with "-source" too.

--- a/t/tests/fields-depends-general/debian/debian/control.in
+++ b/t/tests/fields-depends-general/debian/debian/control.in
@@ -67,3 +67,15 @@ Description: {$description} - Fake Debhelper package
  .
  The fake Debhelper package to test false-positives in
  binary-package-depends-on-toolchain-package.
+
+Package: {$source}-source
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, debhelper
+Description: {$description} - Fake DKMS-like package
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ The fake DKMS-like package to test false-positives in
+ binary-package-depends-on-toolchain-package.
