--- a/t/tests/rules-general/debian/debian/rules
+++ b/t/tests/rules-general/debian/debian/rules
@@ -1,4 +1,7 @@
 #!/usr/bin/make -f
+# See debhelper(7) (uncomment to enable)
+# output every command that modifies files on the build system.
+#export DH_VERBOSE = 1
 
 DEB_AUTO_UPDATE_DEBIAN_CONTROL = yes
 DH_EXTRA_ADDONS = systemd
