--- a/t/tests/systemd-general/debian/debian/test.service
+++ b/t/tests/systemd-general/debian/debian/test.service
@@ -8,6 +8,6 @@ ExecStartPre = /bin/true
 ExecStart=/usr/bin/test
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=multi-user.target unusual.target
 Alias=systemd-aliasd.service
 Alias=anothertest
