--- a/t/tests/java-jars/debian/debian/rules
+++ b/t/tests/java-jars/debian/debian/rules
@@ -9,6 +9,8 @@ override_jh_build:
 	unzip testa.jar
 	zip -r codeless.jar META-INF/
 	zip -r manifestless.jar org/
+	touch org/debian/lintian/TestA.java
+	zip -r contains-source.jar META-INF/ org/
 	perl generate-unparsable.pl
 
 # Skip - it chokes on "unparsable.jar" and we don't need it
