When checking latest-debian-changelog-entry-without-new-version ignore any change of epoch. (Closes: #889991)

--- a/t/tests/changelog-file-general/debian/debian/changelog.in
+++ b/t/tests/changelog-file-general/debian/debian/changelog.in
@@ -1,4 +1,4 @@
-{$source} ({$version}) unstable; urgency=low
+{$source} (1:{$version}) unstable; urgency=low
 
 
   * Test: {$testname}
@@ -21,6 +21,7 @@
     üüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüü
 
   * It might even fix TEMP-1234567-abcdef, though probably not.
+  * We refer to the epoch bump here.
 
  -- {$author}  {$date}
 
