--- a/t/tests/changelog-file-general/debian/debian/changelog.in
+++ b/t/tests/changelog-file-general/debian/debian/changelog.in
@@ -1,4 +1,4 @@
-{$source} (1:{$version}) unstable; urgency=low
+{$source} ({$version}) unstable; urgency=low
 
 
   * Test: {$testname}
@@ -21,7 +21,6 @@
     üüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüüü
 
   * It might even fix TEMP-1234567-abcdef, though probably not.
-  * We refer to the epoch bump here.
 
  -- {$author}  {$date}
 
