Update override_dh_auto_test-does-not-check-DEB_BUILD_OPTIONS to fix a number of false positives. Thanks to Gregor Herrmann for the report. (Closes: #890537)

--- a/t/tests/rules-dh-auto-test-does-not-check-deb-build-options-unrel-c/debian/debian/rules
+++ b/t/tests/rules-dh-auto-test-does-not-check-deb-build-options-unrel-c/debian/debian/rules
@@ -7,6 +7,7 @@ override_dh_auto_test:
 	dh_auto_test
 	dh_auto_test # Comment
 	mkdir ignore/
+	rm -rf ignore/
 	-dh_auto_test -- SUFFIX=1
 	@dh_auto_test -- SUFFIX=1
 	-cp -r ignore ignore/
@@ -15,3 +16,14 @@ override_dh_auto_test:
 	echo "Disabled"
 	@echo "Disabled"
 	-echo "Disabled"
+	-mv -v ignore ignore/
+	[ true ] || echo ignore
+	ENV="var" \
+	ENV="var" \
+	dh_auto_test || true
+	rm -f missing
+	test true && echo "foo"
+	rmdir missing || true
+	ln -sf foo bar
+	true
+	/bin/true
