--- a/t/tests/rules-override-dh-foo-does-not-call-dh-foo-unrel/debian/debian/rules
+++ b/t/tests/rules-override-dh-foo-does-not-call-dh-foo-unrel/debian/debian/rules
@@ -10,3 +10,6 @@ override_dh_clean:
 override_dh_fixperms:
 	true
 	$(overridden_command) # This rule is a false positive
+
+override_dh_fixperms-indep:
+	dh_fixperms
