--- a/t/tests/version-substvars-general/debian/debian/control.in
+++ b/t/tests/version-substvars-general/debian/debian/control.in
@@ -23,6 +23,7 @@ Architecture: all
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\},
          foreign-pkg:any (= $\{source:Version\})
 Replaces: other-foreign-pkg:any (<< $\{binary:Version\})
+Recommends: another-foreign-pkg-$\{suffix\}:any (= $\{source:Version\})
 Description: {$description} - data
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
