--- a/t/tests/files-orphaned-package-not-maintained-in-debian-infrastructure/debian/debian/control.in
+++ b/t/tests/files-orphaned-package-not-maintained-in-debian-infrastructure/debian/debian/control.in
@@ -6,6 +6,7 @@ Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 Vcs-Git: https://github.com/user/project
+Vcs-Browser: https://github.com/user/project
 
 Package: {$source}
 Architecture: {$architecture}
