--- a/t/tests/fields-vcs-deprecated-in-debian-infrastructure/debian/debian/control.in
+++ b/t/tests/fields-vcs-deprecated-in-debian-infrastructure/debian/debian/control.in
@@ -7,6 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 Homepage: https://lintian.debian.org/
 Vcs-Svn: svn://anonscm.debian.org/foobar/trunk
+Vcs-Browser: https://anonscm.debian.org/git/lintian/lintian.git
 
 Package: {$source}
 Architecture: {$architecture}
