--- a/t/tests/fields-malformed-vcs-fields-unrel/debian/debian/control.in
+++ b/t/tests/fields-malformed-vcs-fields-unrel/debian/debian/control.in
@@ -5,7 +5,8 @@ Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
-Vcs-Git: https://anonscm.debian.org/test/test.git -b valid/syntax
+Vcs-Git: https://salsa.debian.org/test/test.git -b valid/syntax
+Vcs-Browser: https://salsa.debian.org/test/test
 
 Package: {$source}
 Architecture: {$architecture}
