--- a/t/tests/fields-vcs-field-insecure-uri/debian/debian/control.in
+++ b/t/tests/fields-vcs-field-insecure-uri/debian/debian/control.in
@@ -5,8 +5,8 @@ Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
-Vcs-Browser: http://anonscm.debian.org/git/users/toddy/foobar.git
-Vcs-Git: git://anonscm.debian.org/users/toddy/foobar.git
+Vcs-Browser: http://salsa.debian.org/toddy/foobar
+Vcs-Git: git://salsa.debian.org/users/toddy/foobar.git
 
 Package: {$source}
 Architecture: {$architecture}
