Update the re-enabling on YAML parsing to support all versions of libyaml-libyaml-perl. This avoids a backport.

--- a/debian/control
+++ b/debian/control
@@ -55,7 +55,7 @@ Build-Depends: aspell <!nocheck>,
                libtext-template-perl <!nocheck>,
                libtimedate-perl <!nocheck>,
                liburi-perl <!nocheck>,
-               libyaml-libyaml-perl (>= 0.69) <!nocheck>,
+               libyaml-libyaml-perl <!nocheck>,
                libxml-simple-perl <!nocheck>,
                man-db <!nocheck>,
                node-uglify <!nocheck>,
@@ -102,7 +102,7 @@ Depends: binutils,
          libtext-levenshtein-perl,
          libtimedate-perl,
          liburi-perl,
-         libyaml-libyaml-perl (>= 0.69),
+         libyaml-libyaml-perl,
          libxml-simple-perl,
          man-db,
          patchutils,
