Add support for blacklisting source packages in order to prevent some currently-problematic packages such as gcc-8-cross-ports preventing the update of https://lintian.debian.org/. (See #890873)

--- a/reporting/config.yaml
+++ b/reporting/config.yaml
@@ -66,3 +66,7 @@ lintian:
 ## via "$config_vars{VAR}"
 template-variables:
   LINTIAN_SOURCE: https://anonscm.debian.org/git/lintian/lintian.git
+
+## Source packages to not process
+blacklist:
+- gcc-8-cross-ports # #890873
