--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Build-Depends: aspell <!nocheck>,
                default-jdk-headless <!nocheck> | default-jdk <!nocheck>,
 # Use bash as a Jessie indicator (dh-elpa is only used for a test)
                dh-elpa <!nocheck> | bash (<< 4.4) <!nocheck>,
+               dh-python <!nocheck>,
                diffstat <!nocheck>,
                docbook-utils,
                docbook-xml,
