--- a/debian/control
+++ b/debian/control
@@ -74,8 +74,8 @@ Build-Depends: aspell <!nocheck>,
                zip <!nocheck>,
 Standards-Version: 4.1.4
 Rules-Requires-Root: no
-Vcs-Git: https://anonscm.debian.org/git/lintian/lintian.git
-Vcs-Browser: https://anonscm.debian.org/git/lintian/lintian.git
+Vcs-Git: https://salsa.debian.org/lintian/lintian.git
+Vcs-Browser: https://salsa.debian.org/lintian/lintian
 Homepage: https://lintian.debian.org/
 
 Package: lintian
