Don't warn about binary-package-depends-on-toolchain-package for Conflicts/Breaks relations. (Closes: #896133)

--- a/t/tests/fields-depends-general/debian/debian/control.in
+++ b/t/tests/fields-depends-general/debian/debian/control.in
@@ -26,6 +26,7 @@ Package: lib{$source}
 Architecture: {$architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, libdb1-compat, perl-modules-5.22
 Recommends: debconf-doc, cdbs
+Conflicts: debhelper
 Section: libs
 Description: {$description} -- fake library
  This is a fake library designed to exercise some feature or tag of
