--- a/t/tests/binaries-missing-depends-on-numpy-abi/debian/debian/rules
+++ b/t/tests/binaries-missing-depends-on-numpy-abi/debian/debian/rules
@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
 export DEB_BUILD_MAINT_OPTIONS=hardening=+all,-pie
+export DEB_LDFLAGS_MAINT_APPEND=-Wl,--no-as-needed
 
 %:
 	dh $@
