--- a/t/tests/python-malformed-py-version/debian/debian/control.in
+++ b/t/tests/python-malformed-py-version/debian/debian/control.in
@@ -4,6 +4,7 @@ Section: java
 Maintainer: {$author}
 Standards-Version: {$standards_version}
 XS-Python-Version: current 2.6
+X-Python3-Version: invalid
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
