--- a/t/tests/python-ancient-python-version-field/debian/debian/control.in
+++ b/t/tests/python-ancient-python-version-field/debian/debian/control.in
@@ -1,10 +1,10 @@
 Source: {$source}
 Priority: optional
-Section: java
+Section: python
 Maintainer: {$author}
 Standards-Version: {$standards_version}
-XS-Python-Version: current 2.7
-X-Python3-Version: invalid
+X-Python3-Version: >= 3.4
+XS-Python-Version: >= 2.7
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
@@ -16,4 +16,3 @@ Description: {$description}
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.  It may
  be an empty package.
-
