Emit an error when a package bumps the epoch but the upstream version did not go "backwards". (Closes: #889816)

--- a/t/tests/changelog-file-epoch-change-without-comment-unrel/debian/debian/changelog.in
+++ b/t/tests/changelog-file-epoch-change-without-comment-unrel/debian/debian/changelog.in
@@ -5,7 +5,7 @@
 
  -- {$author}  {$date}
 
-{$source} (1:{$version}) unstable; urgency=low
+{$source} (1:999999) unstable; urgency=low
 
   * Initial upload.
 
