--- a/t/tests/changelog-file-epoch-change-without-comment-new/debian/debian/changelog.in
+++ b/t/tests/changelog-file-epoch-change-without-comment-new/debian/debian/changelog.in
@@ -4,7 +4,7 @@
 
  -- {$author}  {$date}
 
-{$source} ({$version}) unstable; urgency=low
+{$source} (999999) unstable; urgency=low
 
   * Initial upload.
 
