--- a/t/tests/fields-orphaned-package-not-maintained-in-debian-infrastructure-fp/debian/debian/control.in
+++ b/t/tests/fields-orphaned-package-not-maintained-in-debian-infrastructure-fp/debian/debian/control.in
@@ -6,7 +6,7 @@ Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 Vcs-Git: https://git.dgit.debian.org/python-ofxhome
-Vcs-Browser: https://git.dgit.debian.org/python-ofxhome.git
+Vcs-Browser: https://browse.dgit.debian.org/python-ofxhome.git
 
 Package: {$source}
 Architecture: {$architecture}
