Prevent false-positives when checking debug-package-for-multi-arch-same-pkg-not-coinstallable by ignoring Python "debug" packages. (Closes: #900122)

--- a/t/tests/group-checks-multi-arch/debian/debian/control.in
+++ b/t/tests/group-checks-multi-arch/debian/debian/control.in
@@ -38,3 +38,15 @@ Description: {$description} - pkg-dbg
  things.  It should not be installed like a regular package.
  .
  Multi-arch <none> debug package.
+
+Package: python3-pkg-dbg
+Section: debug
+Architecture: any
+Depends: $\{misc:Depends\}, pkg-same (= $\{binary:Version\}),
+ pkg-foreign (>= $\{source:Version\})
+Description: {$description} - python-pkg-dbg
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
+ .
+ Multi-arch <none> Python "debug package" false positive.
