--- a/t/tests/debhelper-override-typos/debian/debian/rules
+++ b/t/tests/debhelper-override-typos/debian/debian/rules
@@ -17,7 +17,7 @@ foo override_dh_installdebs bar override_dh_installxmlcatalog: # combining regul
 # Don't worry about anything beyond a colon even if wrong; it will fail anyway.
 override_dh_testdirs: override_dh_ucfs
 
-# Specifically check for missing "auto"; is is usually too "distant" to match.
+# Specifically check for missing "auto"; is usually too "distant" to match.
 override_dh_build:
 
 # Good
