--- a/t/tests/version-substvars-general/debian/debian/control.in
+++ b/t/tests/version-substvars-general/debian/debian/control.in
@@ -11,6 +11,7 @@ Architecture: any
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\},
          program-data (= $\{binary:Version\}),
          program-data-extra (= $\{source:Version\})
+Provides: provided-package
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
@@ -22,6 +23,7 @@ Package: program-data
 Architecture: all
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\},
          foreign-pkg:any (= $\{source:Version\})
+Suggests: provided-package (= $\{binary:Version\})
 Replaces: other-foreign-pkg:any (<< $\{binary:Version\})
 Recommends: another-foreign-pkg-$\{suffix\}:any (= $\{source:Version\})
 Description: {$description} - data
