Warn if a debhelper addon is in Build-Depends-{Arch,Indep} but not in Build-Depends. (Closes: #901631)

--- a/t/tests/fields-debhelper-in-build-depends-indep/debian/debian/control.in
+++ b/t/tests/fields-debhelper-in-build-depends-indep/debian/debian/control.in
@@ -2,7 +2,7 @@ Source: {$source}
 Priority: optional
 Section: {$section}
 Maintainer: {$author}
-Build-Depends-Indep: debhelper (>= 11)
+Build-Depends-Indep: debhelper (>= 11), dh-elpa
 Standards-Version: {$standards_version}
 Rules-Requires-Root: no
 
