--- a/t/tests/fields-debhelper-in-build-depends-indep/debian/debian/control.in
+++ b/t/tests/fields-debhelper-in-build-depends-indep/debian/debian/control.in
@@ -2,7 +2,7 @@ Source: {$source}
 Priority: optional
 Section: {$section}
 Maintainer: {$author}
-Build-Depends-Indep: debhelper (>= 11), dh-elpa
+Build-Depends-Indep: debhelper (>= 11)
 Standards-Version: {$standards_version}
 Rules-Requires-Root: no
 
