--- a/t/tests/gir/debian/debian/control.in
+++ b/t/tests/gir/debian/debian/control.in
@@ -18,7 +18,7 @@ Description: {$description}
  This package gets GObject-Introspection wrong in various ways.
 
 Package: gir1.2-good-42
-Section: introspection
+Section: oldlibs
 Architecture: any
 Provides: gir1.2-goodextras-42 (= $\{binary:Version\})
 Depends: $\{gir:Depends\}, $\{shlibs:Depends\}, $\{misc:Depends\}, libgood-42-0
@@ -28,9 +28,12 @@ Description: {$description} - GIR
  things.  It should not be installed like a regular package.
  .
  This contains the GObject-Introspection typelib.
+ .
+ This package is in the oldlibs section (a deprecated typelib), unlike
+ gir1.2-perfect-42 which is in the introspection section.
 
 Package: libgood-42-dev
-Section: libdevel
+Section: oldlibs
 Architecture: any
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, gir1.2-good-42 (= $\{binary:Version\}), libgood-42-0 (= $\{binary:Version\})
 Description: {$description} - development
@@ -38,7 +41,8 @@ Description: {$description} - development
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.
  .
- This contains the development files.
+ This package is in the oldlibs section (a deprecated development
+ package), unlike libperfect-42-dev which is in the libdevel section.
 
 Package: libgood-42-0
 Architecture: any
