--- a/t/tests/control-has-empty-field/debian/debian/control.in
+++ b/t/tests/control-has-empty-field/debian/debian/control.in
@@ -9,11 +9,15 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: binary-targets
 Homepage: https://lintian.debian.org/
 Vcs-Browser:
+# The following line contains "Vcs-Git: \n"
+Vcs-Git: 
 
 Package: {$source}
 Architecture: {$architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Suggests:
+# The following line contains "Provides: \n"
+Provides: 
 Recommends: $\{false:Positive\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
