--- a/t/tests/files-missing-depends-on-sensible-utils/debian/debian/control.in
+++ b/t/tests/files-missing-depends-on-sensible-utils/debian/debian/control.in
@@ -37,3 +37,15 @@ Description: {$description} (with Recommends dependency)
  be an empty package.
  .
  This package has a Recommends dependency on sensible-utils.
+
+Package: {$source}-has-suggests
+Architecture: all
+Depends: $\{misc:Depends\}
+Suggests: sensible-utils
+Description: {$description} (with Suggests dependency)
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ This package has a Suggests dependency on sensible-utils.
