--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ docsource := doc/lintian.xml README.md man/lintian.pod.in \
 allchecks := $(wildcard checks/*)
 allcollect := $(wildcard collection/*)
 tagfiles := $(wildcard t/changes/*.changes t/*/*/tags)
-testfiles := $(wildcard t/tests/*/*.desc)
+testfiles := $(wildcard t/tests/*/desc)
 perlprovides := data/fields/perl-provides
 autoreject_data := $(wildcard private/build-time-data/*)
 onlyrun =
