t: Rewrite a test without using dh_X --ignore
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/t/tests/debhelper-dh-exec/debian/debian/rules
+++ b/t/tests/debhelper-dh-exec/debian/debian/rules
@@ -3,10 +3,10 @@
 %:
 	dh $@
 
-# Ignore the "docs" file as we do not really depend on dh-exec and we
+# Ignore the "mime" file as we do not really depend on dh-exec and we
 # do not really need the files listed there for the test.
-override_dh_installdocs:
-	dh_installdocs --ignore debian/docs
+override_dh_installmime:
+
 
 override_dh_installman:
 
