Don't emit unknown-runtime-tests-feature for autopkgtes "Features:" entries that use "test-name=foo". (Closes: #907620)

--- a/t/tests/testsuite-general/debian/debian/tests/control
+++ b/t/tests/testsuite-general/debian/debian/tests/control
@@ -22,7 +22,7 @@ Test-Command: /bin/true
 Depends: @, missing a comma
 
 Test-Command: /bin/true
-Features: unknownfeature
+Features: unknownfeature, test-name=false-positive
 Restrictions: unknownrestriction
 
 Test-Command: /bin/true
