obsolete-runtime-tests-restriction: new check for needs-recommends
needs-recommends is going to be removed in some future, but already the
usage is flaky, so it is recommended to not use this restriction.
See bug #896698

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/testsuite-general/debian/debian/tests/control
+++ b/t/tests/testsuite-general/debian/debian/tests/control
@@ -26,7 +26,7 @@ Features: unknownfeature, test-name=false-positive
 Restrictions: unknownrestriction
 
 Test-Command: /bin/true
-Restrictions: breaks-testbed, rw-build-tree, needs-root
+Restrictions: breaks-testbed, rw-build-tree, needs-root, needs-recommends
 Depends: @, @builddeps@
 
 Tests: test-1, test-2
