--- a/t/tests/init.d-lsb-headers/debian/debian/control.in
+++ b/t/tests/init.d-lsb-headers/debian/debian/control.in
@@ -70,3 +70,12 @@ Description: {$description} -- all virtual facilities
  in init.d scripts checks by lintian.
  It is part of the Lintian test suite and may
  do very odd things.  It should not be installed like a regular package.
+
+Package: {$source}-early-boot
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
+Description: {$description} -- false positive
+ This is yet another test package designed to exercise the checking of
+ init scripts by Lintian.  It is part of the Lintian test suite and may
+ do very odd things.  It should not be installed like a regular
+ package.
