--- a/t/tests/files-package-contains-foo/debian/debian/rules
+++ b/t/tests/files-package-contains-foo/debian/debian/rules
@@ -51,9 +51,10 @@ override_dh_install:
 	touch $(SHARE)/cmake-3.1/Modules/FindVar.cmake
 
 	# Ignored Cargo sources
-	mkdir -p $(SHARE)/cargo/registry/crate-1.0.0
+	mkdir -p $(SHARE)/cargo/registry/crate-1.0.0/templates
 	touch $(SHARE)/cargo/registry/crate-1.0.0/.gitignore
 	touch $(SHARE)/cargo/registry/crate-1.0.0/LICENSE
+	touch $(SHARE)/cargo/registry/crate-1.0.0/templates/readme.tmpl
 	echo '#!/bin/sh' > $(SHARE)/cargo/registry/crate-1.0.0/test.sh
 	echo '#!/usr/bin/python' > $(SHARE)/cargo/registry/crate-1.0.0/test.py
 	chmod a+x $(SHARE)/cargo/registry/crate-1.0.0/test.py
