--- a/t/tests/files-package-contains-foo/debian/debian/rules
+++ b/t/tests/files-package-contains-foo/debian/debian/rules
@@ -57,6 +57,8 @@ override_dh_install:
 	touch $(SHARE)/cargo/registry/crate-1.0.0/templates/readme.tmpl
 	mkdir -p $(SHARE)/cargo/registry/crate-1.0.0/foo_templates
 	touch $(SHARE)/cargo/registry/crate-1.0.0/foo_templates/readme.tmpl
+	mkdir -p $(SHARE)/cargo/registry/crate-1.0.0/my-templates.d
+	touch $(SHARE)/cargo/registry/crate-1.0.0/my-templates.d/readme.tmpl
 	echo '#!/bin/sh' > $(SHARE)/cargo/registry/crate-1.0.0/test.sh
 	echo '#!/usr/bin/python' > $(SHARE)/cargo/registry/crate-1.0.0/test.py
 	chmod a+x $(SHARE)/cargo/registry/crate-1.0.0/test.py
