Let metapackages depend on toolchain packages.
This allows constructing metapackages that pull in development-related
packages.

Drop "empty package" from the corresponding test package description, so
it doesn't qualify as a metapackage.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/fields-depends-general/debian/debian/control.in
+++ b/t/tests/fields-depends-general/debian/debian/control.in
@@ -31,8 +31,7 @@ Section: libs
 Description: {$description} -- fake library
  This is a fake library designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
- things.  It should not be installed like a regular package.  It may
- be an empty package.
+ things.  It should not be installed like a regular package.
 
 Package: py-{$source}
 Architecture: {$architecture}
