--- a/t/tests/description-general/debian/debian/control.in
+++ b/t/tests/description-general/debian/debian/control.in
@@ -145,3 +145,11 @@ Description: test for spelling - debian developement
  Duplicate: Duplicate (false positive due to colon)
  .
  FOO (FOO Owsome Object) is a recursive acronym.
+
+Package: {$source}-control-statements
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: test for overly-indented control statements
+ Some Lintian test package.
+  .
+ Some more stuff about this Debian test package. (dummy)
