Modified tests t/debs for dynamic rebuilding Resolved issues that arose when files or paths existed already

--- a/t/debs/control-field-traversal-4/Makefile
+++ b/t/debs/control-field-traversal-4/Makefile
@@ -1,7 +1,7 @@
 name = control-field-traversal-4
 
 all:
-	mkdir -p root/usr/share/doc/
+	-mkdir -p root/usr/share/doc/
 	# create a symlink to (usr/share/doc/)dpkg which will make
 	# copyright-file warn that it can't check whether the symlink
 	# points to a foreign package if the directory traversal did
@@ -13,7 +13,7 @@ all:
 	# if the bogus source package name is not caught. This results
 	# into a valid symlink which is enough for copyright-file to
 	# determine that 'source/dpkg' does not exist.
-	ln -s dpkg root/usr/share/doc/$(name)
+	ln -sf dpkg root/usr/share/doc/$(name)
 
 	create-deb -o $(name).deb --root root/ control
 
