--- a/t/debs/control-files-traversal/Makefile
+++ b/t/debs/control-files-traversal/Makefile
@@ -1,7 +1,7 @@
 name = control-files-traversal
 
 all:
-	ln -s ../md5sums conffiles
+	ln -sf ../md5sums conffiles
 	create-deb -o $(name).deb conffiles control
 
 clean:
