--- a/t/debs/md5sums-traversal/Makefile
+++ b/t/debs/md5sums-traversal/Makefile
@@ -1,7 +1,7 @@
 name = md5sums-traversal
 
 all:
-	ln -s ../copyright md5sums
+	ln -sf ../copyright md5sums
 	create-deb -o $(name).deb control md5sums
 
 clean:
