--- a/t/debs/deb-format-record-size/Makefile
+++ b/t/debs/deb-format-record-size/Makefile
@@ -4,9 +4,9 @@ name = deb-format-record-size
 # with the record-size.
 all:
 	echo '2.0' > debian-binary
-	mkdir -p usr/share/doc/$(name)
+	-mkdir -p usr/share/doc/$(name)
 	install -m0644 copyright changelog usr/share/doc/$(name)
-	gzip -9 -n usr/share/doc/$(name)/changelog
+	gzip -9 -n -f usr/share/doc/$(name)/changelog
 	tar --record-size=4096 -c -z -f data.tar.gz usr
 	chown 0:0 control
 	chmod 644 control
