--- a/t/debs/deb-format-wrong-order/Makefile
+++ b/t/debs/deb-format-wrong-order/Makefile
@@ -4,9 +4,9 @@ name = deb-format-wrong-order
 # be "too much effort" to make it be able to do it.
 all:
 	echo '2.0' > debian-binary
-	mkdir -p usr/share/doc/$(name)
+	-mkdir -p usr/share/doc/$(name)
 	install -m 0644 copyright changelog usr/share/doc/$(name)
-	gzip -9n usr/share/doc/$(name)/changelog
+	gzip -9nf usr/share/doc/$(name)/changelog
 	tar cfz data.tar.gz usr
 	chown 0:0 control
 	chmod 644 control
