--- a/t/debs/files-missing-intermediate-dirs/Makefile
+++ b/t/debs/files-missing-intermediate-dirs/Makefile
@@ -2,9 +2,9 @@ name = files-missing-intermediate-dirs
 
 all:
 	echo '2.0' > debian-binary
-	mkdir -p usr/share/doc/$(name)
+	-mkdir -p usr/share/doc/$(name)
 	install -m0644 copyright changelog usr/share/doc/$(name)
-	gzip -9 -n usr/share/doc/$(name)/changelog
+	gzip -9 -n -f usr/share/doc/$(name)/changelog
 	tar czf data.tar.gz usr/share/doc/$(name)
 	chown 0:0 control
 	chmod 644 control
