--- a/t/source/debconf-traversal/Makefile
+++ b/t/source/debconf-traversal/Makefile
@@ -2,12 +2,12 @@ name = debconf-traversal
 dir  = $(name)-1
 
 all:
-	mkdir $(dir)
-	mkdir $(dir)/debian
+	-mkdir $(dir)
+	-mkdir $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	mkdir $(dir)/debian/source
+	-mkdir $(dir)/debian/source
 	echo 1.0 > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in | \
