--- a/t/source/debian-source-dir-unknown-source-format/Makefile
+++ b/t/source/debian-source-dir-unknown-source-format/Makefile
@@ -2,12 +2,12 @@ name = debian-source-dir-unknown-source-format
 dir  = $(name)-1
 
 all:
-	mkdir $(dir)
-	mkdir $(dir)/debian
+	-mkdir $(dir)
+	-mkdir $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	mkdir $(dir)/debian/source
+	-mkdir $(dir)/debian/source
 	echo "3.0 (unknown-format)" > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
