--- a/t/source/unpack-srcpkg-dot-dir/Makefile
+++ b/t/source/unpack-srcpkg-dot-dir/Makefile
@@ -6,13 +6,13 @@ all:
 	echo '/* some C program */' > foo.c
 	echo '/* some header */' > foo.h
 	tar -c -z -f $(name)_1.0.orig.tar.gz ./README ./foo.c ./foo.h
-	mkdir -p $(dir)/debian
+	-mkdir -p $(dir)/debian
 	cp README foo.c foo.h $(dir)
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	echo > $(dir)/debian/watch
-	mkdir $(dir)/debian/source
+	-mkdir $(dir)/debian/source
 	echo 1.0 > $(dir)/debian/source/format
 	dpkg-source -sp -b $(dir)
 
