--- a/t/templates/tests/arch-independent/debian/control.in
+++ b/t/templates/tests/arch-independent/debian/control.in
@@ -4,9 +4,11 @@ Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
+Rules-Requires-Root: no
+Homepage: https://lintian.debian.org/
 
 Package: {$source}
-Architecture: {$architecture}
+Architecture: all
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
