--- a/t/tests/rules-debug-symbol-migration-possibly-complete/debian/debian/rules
+++ b/t/tests/rules-debug-symbol-migration-possibly-complete/debian/debian/rules
@@ -6,3 +6,4 @@
 override_dh_strip:
 	dh_strip prefix --ddeb-migration=foo suffix
 	dh_strip prefix --dbgsym-migration=foo suffix
+	dh_strip prefix --dbgsym-migration='apostrophe' suffix
