Avoid testsuite-dependency-has-unparsable-elements false positives when the "Depends" field starts with a newline. (Closes: #910210)

--- a/t/tests/testsuite-general/debian/debian/tests/control
+++ b/t/tests/testsuite-general/debian/debian/tests/control
@@ -34,3 +34,8 @@ Depends: @
 
 Tests: asym, asym1, self, self1, broken, lfifo, working
 Depends: @
+
+# Depends line starts on a newline (#910210)
+Tests: test-1
+Depends:
+ @
