debian/control: Add run-time dependency Depends: gpg.

--- a/debian/control
+++ b/debian/control
@@ -87,6 +87,7 @@ Depends: binutils,
          dpkg-dev,
          file,
          gettext,
+         gpg,
          intltool-debian,
          libapt-pkg-perl,
          libarchive-zip-perl,
