--- a/t/source/changelog-file-symlink/Makefile.in
+++ b/t/source/changelog-file-symlink/Makefile.in
@@ -1,14 +1,18 @@
-name = control-field-traversal-2
+name = changelog-file-symlink
 dir  = $(name)-1
 
 all:
 	-mkdir $(dir)
 	-mkdir $(dir)/debian
+	rm -f $(dir)/debian/changelog
+	rm -f $(dir)/debian/changelog.old
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
+	mv $(dir)/debian/changelog $(dir)/debian/changelog.old
+	ln -sf changelog.old $(dir)/debian/changelog
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
