--- a/t/source/control-field-traversal-1/Makefile.in
+++ b/t/source/control-field-traversal-1/Makefile.in
@@ -1,13 +1,13 @@
-name = debian-symlink
+name = control-field-traversal-1
 dir  = $(name)-1
 
 all:
 	-mkdir $(dir)
-	ln -sfn . $(dir)/debian
+	-mkdir $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
