--- a/t/source/control-field-traversal-3/Makefile.in
+++ b/t/source/control-field-traversal-3/Makefile.in
@@ -1,5 +1,5 @@
-name = testsuite-control-syntax-error
-dir  = $(name)-1.0
+name = control-field-traversal-3
+dir  = $(name)-1
 
 all:
 	-mkdir $(dir)
@@ -7,12 +7,10 @@ all:
 	cp changelog copyright control rules $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
-	-mkdir $(dir)/debian/tests
-	echo "Random file" > $(dir)/debian/tests/control
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
 clean:
 	rm -rf $(dir)
-	rm -f $(name)_*
+	rm -f $(name)_1*
