--- a/t/source/control-file-duplicate-field/Makefile.in
+++ b/t/source/control-file-duplicate-field/Makefile.in
@@ -1,4 +1,4 @@
-name = fields-src-bad-version
+name = control-file-duplicate-field
 dir  = $(name)-1
 
 all:
@@ -8,7 +8,7 @@ all:
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
