--- a/t/source/control-file-missing-separator/Makefile.in
+++ b/t/source/control-file-missing-separator/Makefile.in
@@ -1,5 +1,5 @@
-name = package-version-0
-dir  = $(name)-0
+name = control-file-missing-separator
+dir  = $(name)-1
 
 all:
 	-mkdir $(dir)
@@ -8,9 +8,10 @@ all:
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
-	dpkg-source -sn -b $(dir)
+	echo '{$source_format}' > $(dir)/debian/source/format
+	tar cfz $(name)_1.tar.gz $(dir)
+	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
 clean:
 	rm -rf $(dir)
-	rm -f $(name)_0*
+	rm -f $(name)_1*
