--- a/t/source/control-file-syntax-error/Makefile.in
+++ b/t/source/control-file-syntax-error/Makefile.in
@@ -1,5 +1,5 @@
-name = testsuite-inconsistent-field
-dir  = $(name)-1.0
+name = control-file-syntax-error
+dir  = $(name)-1
 
 all:
 	-mkdir $(dir)
@@ -8,10 +8,10 @@ all:
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
-	dpkg-source -sn -b $(dir)
-	sed -i '/^Testsuite: /d' *.dsc
+	echo '{$source_format}' > $(dir)/debian/source/format
+	tar cfz $(name)_1.tar.gz $(dir)
+	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
 clean:
 	rm -rf $(dir)
-	rm -f $(name)_*
+	rm -f $(name)_1*
