--- a/t/source/cruft-ancient-file/Makefile.in
+++ b/t/source/cruft-ancient-file/Makefile.in
@@ -1,10 +1,11 @@
-name = magic-architecture-srcpkg-wrong
+name = cruft-ancient-file
 dir  = $(name)-1.0
 
 all:
 	-mkdir $(dir)
 	rm -rf $(dir)/debian/
 	echo 'Some upstream README' > $(dir)/README
+	env TZ=GMT touch -d@-1 $(dir)/README
 	tar -c -f $(name)_1.0.orig.tar.gz -z $(dir)
 	-mkdir $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
@@ -12,8 +13,8 @@ all:
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	echo '# foo' > $(dir)/debian/watch
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
-	dpkg-source -DArchitecture="amd64 any" -sp -b $(dir)
+	echo '{$source_format}' > $(dir)/debian/source/format
+	dpkg-source -sp -b $(dir)
 
 clean:
 	rm -rf $(dir)
