--- a/t/source/debconf-traversal/Makefile.in
+++ b/t/source/debconf-traversal/Makefile.in
@@ -1,4 +1,4 @@
-name = control-file-missing-separator
+name = debconf-traversal
 dir  = $(name)-1
 
 all:
@@ -8,9 +8,10 @@ all:
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
-	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
+	subst-dsc $(name)_1.tar.gz < dsc.in | \
+	     perl -pe 's/\@NULL\@/\0/g' > $(name)_1.dsc
 
 clean:
 	rm -rf $(dir)
