--- a/t/source/debian-source-dir-traversal-1/Makefile.in
+++ b/t/source/debian-source-dir-traversal-1/Makefile.in
@@ -10,7 +10,7 @@ all:
 	echo "Hallo World" > $(dir)/debian/README.source
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	# link to index file for the lab entry
 	# - NB: This should not trigger source-contains-unsafe-symlink
 	#   because the link it self is not unsafe (i.e. it is safe
