--- a/t/source/debian-source-dir-unknown-source-format/Makefile.in
+++ b/t/source/debian-source-dir-unknown-source-format/Makefile.in
@@ -1,4 +1,4 @@
-name = control-file-syntax-error
+name = debian-source-dir-unknown-source-format
 dir  = $(name)-1
 
 all:
@@ -8,7 +8,7 @@ all:
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
