--- a/t/source/debian-symlink/Makefile.in
+++ b/t/source/debian-symlink/Makefile.in
@@ -1,14 +1,13 @@
-name = control-file-duplicate-field
+name = debian-symlink
 dir  = $(name)-1
 
 all:
 	-mkdir $(dir)
-	-mkdir $(dir)/debian
+	ln -sfn . $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
-	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
