--- a/t/source/fields-src-bad-version/Makefile.in
+++ b/t/source/fields-src-bad-version/Makefile.in
@@ -1,12 +1,14 @@
-name = no-sha256-checksum
+name = fields-src-bad-version
 dir  = $(name)-1
 
 all:
-	-mkdir -p $(dir)/debian/source
+	-mkdir $(dir)
+	-mkdir $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
-	echo 9 > $(dir)/debian/compat
-	echo "3.0 (native)" > $(dir)/debian/source/format
+	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
+	-mkdir $(dir)/debian/source
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
