--- a/t/source/fields-src-fields-filename/Makefile.in
+++ b/t/source/fields-src-fields-filename/Makefile.in
@@ -6,7 +6,7 @@ all:
 	-mkdir $(dir)
 	-mkdir $(dir)/debian
 	-mkdir $(dir)/debian/source
-	echo "1.0" > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
