--- a/t/source/magic-architecture-srcpkg-ok/Makefile.in
+++ b/t/source/magic-architecture-srcpkg-ok/Makefile.in
@@ -1,18 +1,18 @@
-name = unpack-srcpkg-xz
+name = magic-architecture-srcpkg-ok
 dir  = $(name)-1.0
 
 all:
 	-mkdir $(dir)
+	rm -rf $(dir)/debian/
 	echo 'Some upstream README' > $(dir)/README
-	tar -c -f $(name)_1.0.orig.tar.xz --xz $(dir)
+	tar -c -f $(name)_1.0.orig.tar.gz -z $(dir)
 	-mkdir $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	touch $(dir)/debian/watch
+	echo '# foo' > $(dir)/debian/watch
 	-mkdir $(dir)/debian/source
-	echo '3.0 (quilt)' > $(dir)/debian/source/format
-	echo 'Information about patching' > $(dir)/debian/README.source
+	echo '{$source_format}' > $(dir)/debian/source/format
 	dpkg-source -sp -b $(dir)
 
 clean:
