--- a/t/source/magic-architecture-srcpkg-wrong/Makefile.in
+++ b/t/source/magic-architecture-srcpkg-wrong/Makefile.in
@@ -1,4 +1,4 @@
-name = magic-architecture-srcpkg-ok
+name = magic-architecture-srcpkg-wrong
 dir  = $(name)-1.0
 
 all:
@@ -12,8 +12,8 @@ all:
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	echo '# foo' > $(dir)/debian/watch
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
-	dpkg-source -sp -b $(dir)
+	echo '{$source_format}' > $(dir)/debian/source/format
+	dpkg-source -DArchitecture="amd64 any" -sp -b $(dir)
 
 clean:
 	rm -rf $(dir)
