--- a/t/source/no-sha256-checksum/Makefile.in
+++ b/t/source/no-sha256-checksum/Makefile.in
@@ -1,14 +1,12 @@
-name = debian-source-dir-unknown-source-format
+name = no-sha256-checksum
 dir  = $(name)-1
 
 all:
-	-mkdir $(dir)
-	-mkdir $(dir)/debian
+	-mkdir -p $(dir)/debian/source
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
-	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	-mkdir $(dir)/debian/source
-	echo "3.0 (unknown-format)" > $(dir)/debian/source/format
+	echo 9 > $(dir)/debian/compat
+	echo '{$source_format}' > $(dir)/debian/source/format
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
