--- a/t/source/testsuite-control-not-file/Makefile.in
+++ b/t/source/testsuite-control-not-file/Makefile.in
@@ -1,5 +1,5 @@
-name = control-field-traversal-3
-dir  = $(name)-1
+name = testsuite-control-not-file
+dir  = $(name)-1.0
 
 all:
 	-mkdir $(dir)
@@ -7,10 +7,13 @@ all:
 	cp changelog copyright control rules $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
+	-mkdir $(dir)/debian/tests
+	rm -f $(dir)/debian/tests/control
+	mkfifo $(dir)/debian/tests/control
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
 clean:
 	rm -rf $(dir)
-	rm -f $(name)_1*
+	rm -f $(name)_*
