--- a/t/source/testsuite-control-syntax-error/Makefile.in
+++ b/t/source/testsuite-control-syntax-error/Makefile.in
@@ -1,4 +1,4 @@
-name = testsuite-control-not-file
+name = testsuite-control-syntax-error
 dir  = $(name)-1.0
 
 all:
@@ -7,10 +7,9 @@ all:
 	cp changelog copyright control rules $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	-mkdir $(dir)/debian/tests
-	rm -f $(dir)/debian/tests/control
-	mkfifo $(dir)/debian/tests/control
+	echo "Random file" > $(dir)/debian/tests/control
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
