--- a/t/source/unpack-srcpkg-no-subdir/Makefile.in
+++ b/t/source/unpack-srcpkg-no-subdir/Makefile.in
@@ -13,7 +13,7 @@ all:
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
 	echo > $(dir)/debian/watch
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
 	dpkg-source -sp -b $(dir)
 
 clean:
