--- a/t/source/unpack-srcpkg-xz/Makefile.in
+++ b/t/source/unpack-srcpkg-xz/Makefile.in
@@ -1,19 +1,18 @@
-name = cruft-ancient-file
+name = unpack-srcpkg-xz
 dir  = $(name)-1.0
 
 all:
 	-mkdir $(dir)
-	rm -rf $(dir)/debian/
 	echo 'Some upstream README' > $(dir)/README
-	env TZ=GMT touch -d@-1 $(dir)/README
-	tar -c -f $(name)_1.0.orig.tar.gz -z $(dir)
+	tar -c -f $(name)_1.0.orig.tar.xz --xz $(dir)
 	-mkdir $(dir)/debian
 	cp changelog copyright control rules $(dir)/debian/
 	cp -R tests/ $(dir)/debian/
 	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	echo '# foo' > $(dir)/debian/watch
+	touch $(dir)/debian/watch
 	-mkdir $(dir)/debian/source
-	echo 1.0 > $(dir)/debian/source/format
+	echo '{$source_format}' > $(dir)/debian/source/format
+	echo 'Information about patching' > $(dir)/debian/README.source
 	dpkg-source -sp -b $(dir)
 
 clean:
