Ensure --dbgsym-migration='quoted with spaces' is correctly displayed when emitting debug-symbol-migration-possibly-complete.

--- a/t/tests/rules-debug-symbol-migration-possibly-complete/debian/debian/rules
+++ b/t/tests/rules-debug-symbol-migration-possibly-complete/debian/debian/rules
@@ -7,3 +7,4 @@ override_dh_strip:
 	dh_strip prefix --ddeb-migration=foo suffix
 	dh_strip prefix --dbgsym-migration=foo suffix
 	dh_strip prefix --dbgsym-migration='apostrophe' suffix
+	dh_strip prefix --dbgsym-migration='apostrophe << 1' suffix
