t/tests: Parameterize package architecture in single binary packages previously hardcoding 'any'.
Tests producing multiple binary packages will have to be split manually, if possible.

--- a/t/tests/fields-indep-without-arch-indep/debian/debian/control.in
+++ b/t/tests/fields-indep-without-arch-indep/debian/debian/control.in
@@ -8,7 +8,7 @@ Build-Depends-Indep: some-package
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: any
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\},
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
