--- a/t/tests/shared-libs-multi-arch-foreign/debian/debian/control.in
+++ b/t/tests/shared-libs-multi-arch-foreign/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: libhallo1
-Architecture: any
+Architecture: {$package_architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Multi-Arch: foreign
 Description: {$description}
