--- a/t/tests/binaries-missing-depends-on-libc/debian/debian/control.in
+++ b/t/tests/binaries-missing-depends-on-libc/debian/debian/control.in
@@ -8,7 +8,7 @@ Rules-Requires-Root: no
 
 Package: libbasic2
 Section: libs
-Architecture: any
+Architecture: {$package_architecture}
 Depends: some-pkg, $\{misc:Depends\}, $\{shlib:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
