--- a/t/tests/binaries-multiarch-same/debian/debian/control.in
+++ b/t/tests/binaries-multiarch-same/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: libbasic2
-Architecture: any
+Architecture: {$package_architecture}
 Pre-Depends: $\{misc:Pre-Depends\}, multiarch-support
 Depends: $\{misc:Depends\}, $\{shlibs:Depends\}
 Multi-Arch: same
