--- a/t/tests/binaries-static-lib/debian/debian/control.in
+++ b/t/tests/binaries-static-lib/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: libfoo-dev
-Architecture: any
+Architecture: {$package_architecture}
 Section: libdevel
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description}
