--- a/t/tests/control-file-source-upload-to-non-free-without-autobuild/debian/debian/control.in
+++ b/t/tests/control-file-source-upload-to-non-free-without-autobuild/debian/debian/control.in
@@ -8,7 +8,7 @@ Rules-Requires-Root: no
 XS-Autobuild: no
 
 Package: {$source}
-Architecture: any
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
