--- a/t/tests/fields-doc-pkg-wrong-arch/debian/debian/control.in
+++ b/t/tests/fields-doc-pkg-wrong-arch/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: {$source}-doc
-Architecture: any
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\},
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
