--- a/t/tests/files-gzip-ma-same/debian/debian/control.in
+++ b/t/tests/files-gzip-ma-same/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: any
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}, $\{shlibs:Depends\},
 Multi-Arch: same
 Description: {$description}
