--- a/t/tests/files-multiarch-foreign-files/debian/debian/control.in
+++ b/t/tests/files-multiarch-foreign-files/debian/debian/control.in
@@ -8,7 +8,7 @@ Rules-Requires-Root: no
 
 Package: libfoo-dev
 Section: libdevel
-Architecture: any
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}, $\{shlibs:Depends\},
 Multi-Arch: foreign
 Description: {$description} (dev)
