--- a/t/tests/scripts-multi-arch-same-calls-pycompile/debian/debian/control.in
+++ b/t/tests/scripts-multi-arch-same-calls-pycompile/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: pkg-same
-Architecture: any
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Multi-Arch: same
 Description: {$description}
